ready to implement virocore

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ARCorePlayGround</string>
     <string name="open_camera_draw">Camera Draw</string>
+    <string name="open_ar_core">Open AR CORE</string>
 </resources>
