--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ARCorePlayGround</string>
     <string name="open_camera_draw">Camera Draw</string>
     <string name="open_ar_core">Open AR CORE</string>
+    <string name="title_activity_ardraw">ARDraw</string>
 </resources>
